--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 body{
     background-color: rgb(241,231,231)
 }
+.biko{
+    height: 400px;
+    width: 400px;
+    float: right;
+}
 nav{
     margin-top: 0PX;
     padding-top: 0PX;
@@ -27,10 +32,31 @@ nav li{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 
-. two{
-    min-height: min-content;
-    min-width: min-content;
 }
-h2{
-    font-weight:50px ;
+.three{
+font-family: 'Times New Roman', Times, serif;
+background-color: antiquewhite;
+font-size: medium;
+font-weight: 200;
 }
+
+.four{
+    display: flex;
+    display: inline-block;
+}
+h3.bio-header {
+    font-size: 40px;
+    top: -50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+.five{
+    font-family: italic;
+    flex-wrap: wrap;
+    background-color: aqua;
+    
+}
+
+
+
+
