--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,182 @@
-body{
-    background-color: rgb(241,231,231)
+*{
+    border-radius: 10px;
 }
-.biko{
-    height: 400px;
-    width: 400px;
-    float: right;
-}
-nav{
-    margin-top: 0PX;
-    padding-top: 0PX;
-    background-color: grey;
-}
-nav li{
-    font-size: 20px;
+body {
+    margin: 40px;
     padding: 10px;
-    margin: 0px;
-    display: inline-block;
-    word-wrap: 100%;
-}
-.colum{
-    float: left;
-    width: 50%;
-}
-.mmh{
-    color: black;
-    font-family: sans-serif;
-    font-size: xx-large;
-    font-weight: 600;
-}
-.one ,hi{
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-
-}
-.three{
-font-family: 'Times New Roman', Times, serif;
-background-color: antiquewhite;
-font-size: medium;
-font-weight: 200;
+    font-size: 25px;
 }
 
-.four{
+.header {
     display: flex;
-    display: inline-block;
-}
-h3.bio-header {
-    font-size: 40px;
-    top: -50px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-}
-.five{
-    font-family: italic;
-    flex-wrap: wrap;
-    background-color: rgb(201, 230, 230);
-    
+    justify-content: space-between;
+    align-items: center;
 }
 h3{
-    font-weight: 500;
+    font-size: 18px;
+}
+.header ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.header ul li {
+    padding: 30px;
+}
+
+.header ul li:hover{
+    box-shadow: 5px 5px 5px gray;
+    background-color: var(--orange);
+    margin: 2px;
+}
+
+.header ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+ul{
+    list-style: none;
 }
 
 
+
+.list3{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+}
+form input{
+    border: 3px solid var(--orange);
+    display: flex;
+    padding: 10px;
+}
+
+#getstarted{
+    background-color: var(--orange);
+}
+
+
+.image-icons {
+    width:25px;
+    height:25px;
+}
+#two ul {
+    list-style: none;
+    display: flex;
+    
+}
+
+a{
+    text-decoration: none;
+}
+
+#two li {
+    margin: 0 10px; 
+    padding: 20px;
+}
+
+.car1{ 
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 30px;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    gap: 50px; 
+    margin: 30px;
+}
+button{
+    background-color: var(--orange);
+    border:none;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+
+.name{
+    text-align: center;
+}
+.download{
+    height: 250px;
+    width: 90%;
+    background-color: rgb(255, 254, 198);
+    box-shadow: 5px 6px 5px gray;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    gap:100px;
+}
+
+#downloads3{
+    margin: -30px 0 -20px 150px;
+
+}
+
+.button-buy{
+    background:var(--orange);
+    border:none;
+    padding:10px 15px;
+    border-radius:5px;
+}
+.button-rent{
+    color:var(--orange);
+    border:2px solid var(--orange);
+    background: none;
+    padding:10px 15px;
+    border-radius:5px;
+}
+
+.one{
+    display:flex;
+    justify-content: space-between;
+}
+
+.types{
+    width:120px;
+    height:35px;
+    gap:10px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: var(--shadow);
+    background-color: transparent;
+}
+
+#two ul li:first-child button{
+    background-color: var(--orange);
+    border:none;
+}
+
+.clients{
+    text-align: center;
+
+}
+
+.download .txt{
+    width:300px;
+
+}
+
+.download h1{
+    font-size: larger;
+}
+
+.download .imgs{
+    display:flex;
+    padding:0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+.download .first{
+    height:fit-content;
+}
 
 
