--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ a{
     height: 250px;
     width: 90%;
     background-color: rgb(255, 254, 198);
-    box-shadow: 5px 6px 5px gray;
+    box-shadow: 5px 6px 5px rgb(177, 173, 173);
     display: flex;
     justify-content: center;
     padding: 5px;
